Small fixes for Item endpoints, created test db for testing and docker compose

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=webstore
+POSTGRES_DB=test_db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 # Full SQLAlchemy URL used by the app; docker-compose sets this automatically
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/webstore
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/test_db
