--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,15 +5,13 @@ services:
       dockerfile: Dockerfile
     container_name: webstore_backend
     env_file:
-      - .env
-    volumes:
-      - ./app:/code/app
+      - .env.test
     depends_on:
       postgres:
         condition: service_healthy
     ports:
       - "8000:8000"
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
     restart: unless-stopped
 
   frontend:
@@ -29,10 +27,8 @@ services:
   postgres:
     image: postgres:15
     container_name: webstore_postgres
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env.test
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
