--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=test_db
+POSTGRES_DB=postgres
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 # Full SQLAlchemy URL used by the app; docker-compose sets this automatically
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/test_db
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres
