--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: webstore_backend
+    container_name: investapp_backend
     env_file:
       - .env
     volumes:
@@ -18,7 +18,7 @@ services:
 
   frontend:
     image: nginx:stable-alpine
-    container_name: webstore_frontend
+    container_name: investapp_frontend
     volumes:
       - ./frontend:/usr/share/nginx/html:ro
       - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
@@ -28,7 +28,7 @@ services:
 
   postgres:
     image: postgres:15
-    container_name: webstore_postgres
+    container_name: investapp_postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
