Added STOCK feature

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    location = / {
+        try_files /stock.html =404;
+    }
+
+    location = /item {
+        try_files /index.html =404;
+    }
 
     location / {
         try_files $uri $uri/ =404;
