--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,11 +13,19 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     location = / {
+        try_files /index.html =404;
+    }
+
+    location = /stock {
         try_files /stock.html =404;
     }
 
+    location = /investment {
+        try_files /investment.html =404;
+    }
+
     location = /item {
-        try_files /index.html =404;
+        try_files /items.html =404;
     }
 
     location / {
