--- a/.github/workflows/python-coverage.yml
+++ b/.github/workflows/python-coverage.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: Python test coverage
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11"]
 
     services:
       postgres:
@@ -44,7 +44,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+    - name: Test with pytest and check coverage
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
         POSTGRES_USER: postgres
@@ -53,4 +53,4 @@ jobs:
         POSTGRES_HOST: localhost
         POSTGRES_PORT: 5432
       run: |
-        pytest tests/conftest.py tests/ -v --tb=short --cov=app
+        pytest tests/conftest.py tests/ -v --tb=short --cov=app --cov-fail-under=80 --cov-report=term-missing
