--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,4 +1,4 @@
-# This workflow will install Python dependencies, lint with a variety of Python versions
+# This workflow will install Python dependencies, run flake8 to check the style of the code, and run pytest to check the tests and coverage.
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python CI
